--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -33,10 +30,42 @@
   }
 }
 
-.card {
-  padding: 2em;
+.app-container {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 200px 1fr;
+  grid-template-areas: 
+    "sidebar header"
+    "sidebar main";
+  height: 100vh; 
+  overflow: hidden;
 }
 
-.read-the-docs {
-  color: #888;
+.app-container > * {
+  border: 2px solid #000;
+}
+
+.app-nav {
+  grid-area: sidebar;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 200px;
+  border-left: none;
+  border-top: none;
+  border-bottom: none;
+}
+
+.app-header {
+  grid-area: header;
+  border-top: none;
+  border-right: none;
+}
+
+.app-main {
+  grid-area: main;
+  overflow-y: auto;
+  border-right: none;
+  border-bottom: none;
 }
