--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,39 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
+}
+
+body {
+  color: #213547;
+  --background-color: #fafafa;
+  --border-color: #347009;
+
+  --image-grayscale: 0;
+  --image-opacity: 100%;
+}
+
+body {
+  background-color: var(--background-color);
+}
+
+body.dark {
+  --color: rgba(255, 255, 255, 0.87);
+  --background-color: #242424;
+  --border-color: #26331d;
+
+  --image-grayscale: 50%;
+  --image-opacity: 90%;
+}
+
+img,
+video {
+  filter: grayscale(var(--image-grayscale)) opacity(var(--image-opacity));
 }
 
 html, body {
@@ -48,9 +73,13 @@ button:focus-visible {
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
+  body {
     color: #213547;
-    background-color: #ffffff;
+    --background-color: #fafafa;
+    --border-color: #347009;
+
+    --image-grayscale: 0;
+    --image-opacity: 100%;
   }
   a:hover {
     color: #747bff;
