--- a/src/pages/Activity.css
+++ b/src/pages/Activity.css
@@ -12,6 +12,7 @@
 }
 
 .modal-content {
+    position: relative;
     background-color: var(--background-color);
     padding: 2em;
     border-radius: 8px;
@@ -19,4 +20,20 @@
     width: 80%;
     height: 80%;
     max-width: 90%;
+}
+
+.modal-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: var(--text-color);
+}
+
+.modal-close:hover {
+    color: var(--border-color);
 }
