Disabled background when modal opens

--- a/src/pages/Activity.css
+++ b/src/pages/Activity.css
@@ -17,9 +17,18 @@
     padding: 2em;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 80%;
+    width: 40%;
     height: 80%;
     max-width: 90%;
+}
+
+.no-scroll {
+    overflow: hidden;
+}
+
+.no-interaction {
+    pointer-events: none;
+    filter: blur(2px);
 }
 
 .modal-close {
